fix: overflow des metadata

--- a/src/components/Metatada/Metadata.css
+++ b/src/components/Metatada/Metadata.css
@@ -12,6 +12,8 @@ height: 100%;
 .metadata-container {
   height: 100%;
   width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
 .column-optionnal-element {
